# learnOpenGl

./: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp
src/renderer/: shader.cpp  shader.h
src/shaders/: shadersTutorial-vertex.glsl
